New website version by @Hexagoo (just integrated without edition)

--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -1,106 +1,254 @@
-<html>
+<!doctype html>
+<html lang="fr">
+<!--
+Page    : index
+Version : 1.0
+Author  : EnosisApp
+ -->
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Enosis project</title>
-    <meta name="Enosis Application - project" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-          rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css"/>
-    <link rel="stylesheet" href="assets/css/responsive.css"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <title>Enosis</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Mobland - Mobile App Landing Page Template">
+    <meta name="keywords" content="HTML5, bootstrap, mobile, app, landing, ios, android, responsive">
+    <!-- Font -->
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- Themify Icons -->
+    <link rel="stylesheet" href="css/themify-icons.css">
+    <!-- Main css -->
+    <link href="css/style.css" rel="stylesheet">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113774744-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-113774744-1');
+    </script>
 </head>
 
-<body>
+<body data-spy="scroll" data-target="#navbar" data-offset="30">
 
-<!-- Navigation
-    ================================================== -->
-<div class="hero-background">
-    <div class="container">
-        <!-- Hero-Section
-          ================================================== -->
-        <div class="hero row">
-          <div class="hero-right col-sm-6 col-sm-6">
-            <h1 class="header-headline">Redécouvrez votre ville<br></h1>
+    <!-- Nav Menu -->
 
-                <a class="logo" href="#"> <img class="logo" src="assets/images/logo.png"/> </a>
-                <h4 class="header-running-text light">Une application anonyme et ouverte reliant en temps réel les lieux de vie d’une ville aux centres d’intérêt de ceux qui les fréquentent.</h4>
-                <a href="#features">
-                    <button class="hero-btn">En savoir plus !</button>
-                </a>
-
-            </div><!--hero-left-->
-
-            <div class="col-sm-6 col-sm-6 ipad">
-                <img class="ipad-screen img-responsive" src="assets/images/screen.png"/>
-
-            </div>
-            <div><img class="mouse" src="assets/images/mouse.svg"/></div>
-        </div><!--hero-->
-    </div> <!--hero-container-->
-</div><!--hero-background-->
-
-
-<!-- Features
-  ================================================== -->
-
-<div id="features" class="features-section">
-  <div>
-      <img class="strips" src="assets/images/strips.png">
-  </div>
-
-    <div class="features-container row">
-
-        <h2 class="features-headline light">EnosisApp expliqué en 90 secondes</h2>
-        <div class="video-container">
-         <iframe width="880" height="495" src="https://www.youtube.com/embed/C0hYfpy5vJA" frameborder="0" allowfullscreen></iframe>
-        </div>
-    </div> <!--features-container-->
-
-</div> <!--features-section-->
-
-<!-- Logos
-  ================================================== -->
-
-<div class="logos-section">
-  <p>
-    <img src="assets/images/logos-store.jpg"/><br>Sortie 10/2017
-  </p>
-  <hr>
-  <p class="partners light">Ils nous soutiennent</p>
-    <a href="http://www.labri.fr/"><img class="logos" src="assets/images/logos.png"/></a>
-</div><!--logos-section-->
-
-<!-- Footer
-  ================================================== -->
-<div class="footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-4 rights">© 2017 Enosis All Rights Reserved</div>
-
-            <div class="col-sm-4 webscope">
-            </div>
-            <!--webscope-->
-
-            <div class="col-sm-4">
-                <div class="social-links">
-                    <a href="https://twitter.com/enosisapp"> <img class="social-link"
-                                                                    src="assets/images/twitter.svg"/> </a>
+    <div class="nav-menu fixed-top">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <nav class="navbar navbar-dark navbar-expand-lg">
+                        <a class="navbar-brand" href="/">
+                        <svg class="img-fluid" id="logo" alt="logo" version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                        	 viewBox="0 0 382.5 115.4" style="enable-background:new 0 0 382.5 115.4;" xml:space="preserve">
+                        <text transform="matrix(1 0 0 1 4.2285 105.9997)" class="st0 st1 st2">Enosis</text>
+                        </svg>
+                        </a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+                        <div class="collapse navbar-collapse" id="navbar">
+                            <ul class="navbar-nav ml-auto">
+                                <li class="nav-item"><a href="#download" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">Télécharger la Beta</a></li>
+                                <li class="nav-item"> <a class="nav-link" href="#gitlab">CONTRIBUER</a> </li>
+                            </ul>
+                        </div>
+                    </nav>
                 </div>
-                <!--social-links-->
             </div>
-            <!--social-links-parent-->
         </div>
-        <!--row-->
     </div>
-    <!--container-->
-</div>
-<!--footer-->
 
-<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-<script src="assets/js/script.js"></script>
+
+    <header class="bg-gradient" id="home">
+        <div class="container mt-5">
+            <h1>Redécouvre ton université</h1>
+            <p class="tagline">Enosis te permet de trouver des coins sympas dans l'Université de Bordeaux pour manger, te reposer, boire un café...l'app idéale pour tout étudiant.</p>
+        </div>
+        <a href="https://www.youtube.com/watch?v=C0hYfpy5vJA" id="link_video" target="_blank"><span class="ti-control-play gradient-fill ti-3x mr-3" id="video_icon"></span>
+        <small id="title_video">Voir la vidéo</small></a>
+        <div class="img-holder mt-3"><img src="images/iphonex.png" alt="phone" class="img-fluid" id="mockup_multi"></div>
+    </header>
+
+    <div class="client-logos my-5">
+        <div class="container text-center">
+            <img src="images/client-logos.png" alt="client logos" class="img-fluid">
+        </div>
+    </div>
+
+    <div class="section light-bg" id="features">
+        <div class="container">
+            <img src="images/icon_arrondi.png" class="img-fluid" id="enosis_logo" alt="logo">
+            <div class="section-title">
+                <h3>Par des étudiants...pour des étudiants</h3>
+            </div>
+
+            <div class="row">
+              <div class="col-12 col-lg-4">
+                  <div class="card features">
+                      <div class="card-body">
+                          <div class="media">
+                              <span class="ti-user gradient-fill ti-3x mr-3"></span>
+                              <div class="media-body">
+                                  <h4 class="card-title">Communautaire</h4>
+                                  <p class="card-text">Toi aussi partage tes centres d'intérêts pour aider d'autres étudiants à trouver leur lieu préféré ! </p>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+                <div class="col-12 col-lg-4">
+                    <div class="card features">
+                        <div class="card-body">
+                            <div class="media">
+                                <span class="ti-wheelchair gradient-fill ti-3x mr-3"></span>
+                                <div class="media-body">
+                                    <h4 class="card-title">Accessible</h4>
+                                    <p class="card-text">Enosis permet de rencenser les lieux accessibles aux personnes à mobilité réduite.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4">
+                    <div class="card features">
+                        <div class="card-body">
+                            <div class="media">
+                                <span class="ti-lock gradient-fill ti-3x mr-3"></span>
+                                <div class="media-body">
+                                    <h4 class="card-title">Securisé</h4>
+                                    <p class="card-text">Les informations que tu renseignes sur Enosis restent anonyme ! Nous n'exploitons pas tes données.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <!-- // end .section -->
+    <div class="section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 offset-lg-6">
+                    <div class="box-icon"><span class="ti-mobile gradient-fill ti-3x"></span></div>
+                    <h2>L'université 3.0</h2>
+                    <p class="mb-4">L'objectif d'Enosis est que tu trouves des lieux dans l'Université qui te correspondent...mais pas seulement !
+                    Avec Enosis, l'<a href="https://www.u-bordeaux.fr/" target="_blank" rel="nofollow">Université de Bordeaux</a> passe à l'étape supérieur de sa transformation numérique. </p>
+                </div>
+            </div>
+            <div class="perspective-phone">
+                <img src="images/perspective.png" alt="perspective phone" class="img-fluid">
+            </div>
+        </div>
+    </div>
+    <!-- // end .section -->
+
+    <div class="section light-bg">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 d-flex align-items-center">
+                    <ul class="list-unstyled ui-steps">
+                        <li class="media">
+                            <div class="circle-icon mr-4">1</div>
+                            <div class="media-body">
+                                <h5>Complète ton profil</h5>
+                                <p>Ajoute ta tranche d'âge, informe de ta mobilité et complète tes centres d'intérêts sous forme de 4 catégories : sports, activités, musiques et langues parlées.</p>
+                            </div>
+                        </li>
+                        <li class="media my-4">
+                            <div class="circle-icon mr-4">2</div>
+                            <div class="media-body">
+                                <h5>Active ton Bluetooth</h5>
+                                <p>En activant ton Bluetooth tu partages tes centres d'intérêts pour compléter les profils type des lieux que tu fréquentes et ainsi aider d'autres étudiants.</p>
+                            </div>
+                        </li>
+                        <li class="media">
+                            <div class="circle-icon mr-4">3</div>
+                            <div class="media-body">
+                                <h5>Trouve les lieux qui te correspondent !</h5>
+                                <p>Avec la carte d'Enosis tu as accès à tous les lieux intéressant de l'université de Bordeaux. Tu n'as plus qu'à regarder celui qui te correspond.</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <img src="images/iphonex.png" alt="iphone" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- // end .section -->
+
+    <div class="section bg-gradient" id="download">
+        <div class="container">
+            <div class="call-to-action">
+                <div class="box-icon"><span class="ti-mobile gradient-fill ti-3x"></span></div>
+                <h2>Télécharger maintenant</h2>
+                <p class="tagline">Cette première version d'Enosis est en version Beta. Lors de votre utilisation n'hésitez pas à nous envoyer vos retours et remarques.</br></p>
+                <div class="my-4">
+
+                    <a href="https://itunes.apple.com/us/app/enosis/id1302932882?l=fr&ls=1&mt=8" rel="nofollow" target="_blank" class="btn btn-light"><img src="images/appleicon.png" alt="icon"> App Store</a>
+                    <a href="https://play.google.com/store/apps/details?id=com.enosisTeam.Enosis" rel="nofollow" target="_blank" class="btn btn-light"><img src="images/playicon.png" alt="icon"> Google play</a>
+                </div>
+                <p class="text-primary"><small><i>*Nécessite iOS 9.0.0/Android 4.1 ou version ultérieure. </i></small></p>
+              </div>
+
+        </div>
+    </div>
+    <!-- // end .section -->
+
+    <div class="section" id="gitlab">
+        <div class="container">
+            <div class="call-to-action">
+                <div class="box-icon"><span class="ti-github gradient-fill ti-3x"></span></div>
+                <h2>Contribuer au projet</h2>
+                <p class="tagline">Enosis est Open Source, c'est pourquoi vous pouvez vous aussi contribuer au projet.</br> L'application Enosis, l'API et la partie Administrateur sont disponibles !</br></p>
+                <div class="my-4">
+
+                <a href="https://github.com/EnosisApp/app" target="_blank" class="btn btn-light" rel="nofollow">Application</a>
+                    <a href="https://github.com/EnosisApp/api" target="_blank" class="btn btn-light" rel="nofollow">API</a>
+                    <a href="https://github.com/EnosisApp/website" target="_blank" class="btn btn-light" rel="nofollow">Admin</a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="light-bg py-5" id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 text-center text-lg-left">
+                    <p class="mb-2"> <span class="ti-location-pin mr-2"></span>Bâtiment 9A, 15 Rue de Naudet, 33175 Gradignan</p>
+                    <div class=" d-block d-sm-inline-block">
+                        <p class="mb-2">
+                            <span class="ti-email mr-2"></span> <a class="mr-4" href="mailto:&#101;&#110;&#111;&#115;&#105;&#115;&#097;&#112;&#112;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">&#101;&#110;&#111;&#115;&#105;&#115;&#097;&#112;&#112;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="social-icons">
+                        <a href="https://www.facebook.com/enosisApp/" rel="nofollow"><span class="ti-facebook"></span></a>
+                        <a href="https://twitter.com/EnosisApp?lang=fr" rel="nofollow"<span class="ti-twitter-alt"></span></a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+    <!-- // end .section -->
+    <footer class="my-5 text-center">
+        <!-- Copyright removal is not prohibited! -->
+        <p class="mb-2"><small>COPYRIGHT © 2018. TEMPLATE BY <a href="https://colorlib.com" rel="nofollow">COLORLIB</a></small></p>
+        <small>
+            <a href="/mentions" class="m-2">MENTIONS LÉGALES</a>
+        </small>
+    </footer>
+    <!-- jQuery and Bootstrap -->
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <!-- Custom JS -->
+    <script src="js/script.js"></script>
 </body>
 </html>
